--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -420,20 +420,20 @@ nav > ul li a:active {
 	}
 
 	.iphoneScreen {
-		width: 450px;
+		width: 90%;
 		margin-left: 24px;
 		margin-top: 22px;
 	}
 
 	.videoContainer {
-		width: 450px;
+		width: 90%;
 		/*height: 698px;*/
 		margin-left: 24px;
 		margin-top: 22px;
 	}
 	
 	.videoContainer > video {
-		width: 450px;
+		width: 90%;
 		/*height: 698px;*/
 	}
 	
