--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,12 +46,12 @@
                                 {{ site.app_description }}
                             </p>
                         </div>
-                        <div class="downloadButtonsContainer">
+                        <!--<div class="downloadButtonsContainer">
                             {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
                             <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
-                        </div>
+                        </div>-->
                     </div>
                     {% include features.html %}
                     {% include footer.html %}
