--- a/_includes/screencontent.html
+++ b/_includes/screencontent.html
@@ -2,13 +2,13 @@
 
 {% for file in site.static_files %}
     {% if file.path contains 'assets/screenshot/' %}
-       <!-- <script>
+       <script>
             $(function() {
                 $(".iphoneScreen").attr('src', '{{ site.github.baseurl }}{{ file.path }}');
                 $(".iphoneScreen").removeClass("hidden");
                 console.log("{{ file.path }}");
             });
-        </script>-->
+        </script>
     {% elsif file.path contains 'assets/videos/' %}
         {% unless file.path contains 'assets/videos/Place-video-files-here.txt' %}
             <script>
