--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,9 +25,9 @@
 				<li><a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a></li>
 				{% endif %}
 			{% endfor %}
-			{% if site.presskit_download_link %}
+			<!--{% if site.presskit_download_link %}
 				<li><a href="{{ site.presskit_download_link }}">Download</a></li>
-			{% endif %}
+			{% endif %}-->
 		</ul>
 	</nav>
 </header>
