--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,8 +63,8 @@
 		{% for page in site.pages %}
 			<a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a>
 		{% endfor %}
-		{% if site.presskit_download_link %}
+		<!--{% if site.presskit_download_link %}
 			<a href="{{ site.presskit_download_link }}">Download</a>
-		{% endif %}
+		{% endif %}-->
 	</div>
 </footer>
