--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,9 @@
 		</div>
 
 			{% if page.url != '/' %}
-				<a href="../" target="_self"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></a>
+				<a href="../" target="_self"><p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p></a>
 			{% else %}
-				<img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" >
+				<p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p>
 			{% endif %}
 		<!--<p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p>-->
 		<!--<p class="headerName">{{ site.app_name }}</p>-->
