--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,8 @@
 			{% if page.url != '/' %}
 				<a href="../" target="_self"><p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p></a>
 			{% else %}
-				<p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p>
+				<a href="../" target="_self"><p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p></a>
+				<!--<p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p>-->
 			{% endif %}
 		<!--<p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p>-->
 		<!--<p class="headerName">{{ site.app_name }}</p>-->
