--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 		</div>
 
 			{% if page.url != '/' %}
-				<p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p>
+				<p class="headerName"><a href="../" target="_self"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></a></p>
 				<!--<a href="../" target="_self"><p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p></a>-->
 			{% else %}
 				<p class="headerName"><img class="headerImage" src="{{ site.url}}/Fallout-Sonora/assets/fallout-sonora-logo.png" ></p>
