--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
                     <div class="appInfo">
                         <div class="appIconShadow">
 
-                            <img class="appIconLarge" src="{{ site.app_icon | relative_url }}">
+                            <img class="appIconLarge" alt="Fallout: Sonora Icon" src="{{ site.app_icon | relative_url }}">
                         </div>
                         <div class="appNamePriceContainer">
                             <h1 class="appName">
