--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,6 +11,7 @@
     <div class="headerBackground subPageHeaderBackground">
         <div class="container subPageContainer">
         {% include header.html %}
+        {% include features.html %}
             <article class="page markdown-body">
                 {{ content }}
             </article>
