--- a/_layouts/page-2.html
+++ b/_layouts/page-2.html
@@ -14,7 +14,7 @@
 
                 {{ content }}
           
-        
+        </div>
         {% include appstoreimages.html %}
     </div>
 </body>
