--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,10 @@
 	<title class="pageTitle">{{ site.page_title }}</title>
 	<meta name="description" content="{{ site.app_description }}">
 
-	<link rel="shortcut icon" href="{{ site.app_icon | relative_url }}">
+	<!--<link rel="shortcut icon" href="{{ site.app_icon | relative_url }}">-->
+	<link rel=”shortcut icon” href =“favicon.ico”>
+
+
 
 	<!-- Smart App Banner -->
 	{% if site.enable_smart_app_banner %}
