--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,11 @@
 	<meta name="description" content="{{ site.app_description }}">
 
 	<!--<link rel="shortcut icon" href="{{ site.app_icon | relative_url }}">-->
-	<link rel="shortcut icon" href="/Fallout-Sonora/favicon.ico">
+	<!--<link rel="shortcut icon" href="/Fallout-Sonora/favicon.ico">-->
+	<link rel="icon" href="/Fallout-Sonora/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="/Fallout-Sonora/favicon96.png" type="image/png" sizes="96x96" />
+	<link rel="icon" href="/Fallout-Sonora/favicon192.png" type="image/png" sizes="192x192" />
+	<link rel="apple-touch-icon" href="/Fallout-Sonora/favicon180.png" sizes="180x180" />
 
 
 
