--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
 				<li><a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a></li>
 				{% endif %}
 			{% endfor %}
-			<li><a href="fallout-nevada.ru/#/Fallout_Sonora_1_14_dlc_eng">Play Online</a></li>
+			<li><a href="https://fallout-nevada.ru/#/Fallout_Sonora_1_14_dlc_eng">Play Online</a></li>
 			<!--{% if site.presskit_download_link %}
 				<li><a href="{{ site.presskit_download_link }}">Download</a></li>
 			{% endif %}-->
