--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
                             </video>
                         </div>  
                         
-                        <a href="https://fallout-nevada.ru/#/Fallout_Sonora_1_14_dlc_eng"><img class="iphoneScreen hidden" src="" alt=""></a>
+                        <a href="https://fallout-nevada.ru/#/Fallout_Sonora_1_14_dlc_eng" alt="Play Online!"><img class="iphoneScreen hidden" src="" alt=""></a>
 
                         {% include screencontent.html %}
 
