--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,11 +61,14 @@
 
 	</div>
 	<div class="footerLinks">
-		{% for page in site.pages %}
-			<a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a>
-		{% endfor %}
-		<!--{% if site.presskit_download_link %}
-			<a href="{{ site.presskit_download_link }}">Download</a>
-		{% endif %}-->
+			{% for page in site.pages %}
+				{% if page.include_in_header == true %}
+				<li><a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a></li>
+				{% endif %}
+			{% endfor %}
+			<li><a href="https://fallout-nevada.ru/#/Fallout_Sonora_1_14_dlc_eng">Play Online</a></li>
+			<!--{% if site.presskit_download_link %}
+				<li><a href="{{ site.presskit_download_link }}">Download</a></li>
+			{% endif %}-->
 	</div>
 </footer>
