--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,12 +63,12 @@
 	<div class="footerLinks">
 			{% for page in site.pages %}
 				{% if page.include_in_header == true %}
-				<li><a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a></li>
+				<a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a>
 				{% endif %}
 			{% endfor %}
-			<li><a href="https://fallout-nevada.ru/#/Fallout_Sonora_1_14_dlc_eng">Play Online</a></li>
+			<a href="https://fallout-nevada.ru/#/Fallout_Sonora_1_14_dlc_eng">Play Online</a>
 			<!--{% if site.presskit_download_link %}
-				<li><a href="{{ site.presskit_download_link }}">Download</a></li>
+				<a href="{{ site.presskit_download_link }}">Download</a>
 			{% endif %}-->
 	</div>
 </footer>
